Audit JVM tuning advisor recommendations
Make memory and Kubernetes sizing deterministic and evidence-backed, remove speculative JVM flags, correct QoS and probe guidance, and document the supported model and limitations.

Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>
Copilot-Session: b31f7a31-f8be-4105-85e0-1fd535c33e9e